WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
266151
[iOS] Tapping 'Look Up' hangs when async UIKit interactions are disabled
https://bugs.webkit.org/show_bug.cgi?id=266151
Summary
[iOS] Tapping 'Look Up' hangs when async UIKit interactions are disabled
Wenson Hsieh
Reported
2023-12-09 12:26:36 PST
rdar://119434158
Attachments
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2023-12-09 12:30:59 PST
Pull request:
https://github.com/WebKit/WebKit/pull/21577
EWS
Comment 2
2023-12-09 13:08:19 PST
Committed
271813@main
(f1f3c6392ba0): <
https://commits.webkit.org/271813@main
> Reviewed commits have been landed. Closing PR #21577 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug