[iOS] Tapping 'Look Up' hangs when async UIKit interactions are disabled https://bugs.webkit.org/show_bug.cgi?id=266151 rdar://119434158

Reviewed by Megan Gardner.

Fix a hang under `-_defineForWebView:`; instead of calling back into itself, it should be calling
into the real implementation in `-defineForWebView:`.

* LayoutTests/editing/selection/ios/look-up-selected-text-expected.txt: Added.
* LayoutTests/editing/selection/ios/look-up-selected-text.html: Added.
* Source/WebKit/UIProcess/ios/WKContentViewInteraction.mm:
(-[WKContentView _defineForWebView:]):

Canonical link: https://commits.webkit.org/271813@main